add:go-hot-update

--- a/conf.yaml
+++ b/conf.yaml
@@ -2,7 +2,7 @@
 ---
 url: /
 title: Jimersy Lee's Blog
-subtitle: 典型程序员的日常
+subtitle: Just for fun
 theme: default
 enableCache: true
 highlight: true
