--- a/conf.yaml
+++ b/conf.yaml
@@ -28,4 +28,4 @@ blog:
 text:
     title: 介绍
     intro: >
-            能搜索到我的人都不是等闲之辈,毕竟英雄惺惺相惜,人以群分,哈哈哈~
+            “What I cannot create, I do not understand.” – Richard Feynman
