--- a/conf.yaml
+++ b/conf.yaml
@@ -1,6 +1,6 @@
 #GitBlog配置文件，使用4个空格代替Tab
 ---
-url: http://local.v4.blog.com/
+url: http://blog.jimersylee.com/
 title: Jimersy Lee's Blog
 subtitle: Just for fun
 theme: quest
